Add styles to toggle list display
Wrap List title(h3) and ul in dev to allow hiding list details.
Add CSS class to accomplish above.

Add CSS class to strike-through li to mark as completed.

--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,10 +1,16 @@
-<h2>ListR</h2>
+<div class="container">
 
-{{#each model as |list|}}
-  Title: {{list.title}}
-  <ul>
-    {{#each list.items as |item|}}
-      <li>{{item.content}}</li>
-    {{/each}}
-  </ul>
-{{/each}}
+  <h2>ListR</h2>
+
+  {{#each model as |list|}}
+    <div>
+      <h3>Title: {{list.title}}</h3>
+      <ul>
+        {{#each list.items as |item|}}
+          <li>{{item.content}}</li>
+        {{/each}}
+      </ul>
+    </div>
+  {{/each}}
+
+</div>
