Add listr-list component
Include property to hide list detail
Current off (false)

--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,16 +1,8 @@
 <div class="container">
 
   <h2>ListR</h2>
-
   {{#each model as |list|}}
-    <div>
-      <h3>Title: {{list.title}}</h3>
-      <ul>
-        {{#each list.items as |item|}}
-          <li>{{item.content}}</li>
-        {{/each}}
-      </ul>
-    </div>
+    {{listr-list list=list}}
   {{/each}}
 
 </div>
