Create component for listr-list/item
Update listr-list component to use listr-list/item.
Add done UI toggle to listr-list/item.

--- a/app/components/listr-list/template.hbs
+++ b/app/components/listr-list/template.hbs
@@ -1,6 +1,6 @@
 <h3 {{action 'toggleListDetail'}}>Title: {{list.title}}</h3>
 <ul>
   {{#each list.items as |item|}}
-    <li>{{item.content}}</li>
+    {{listr-list/item item=item}}
   {{/each}}
 </ul>
