--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <h2>ListR</h2>
-  {{#each model as |list|}}
-    <h3>{{list.title}}</h3>
+  {{#each model as |listr|}}
+    {{listr-list list=listr}}
   {{/each}}
 </div>
