Add toggle of listr-list items.
Leave title displayed.

--- a/app/components/listr-list/template.hbs
+++ b/app/components/listr-list/template.hbs
@@ -1,4 +1,4 @@
-<h3>{{list.title}}</h3>
+<h3 {{action 'toggleListDetail'}}>{{list.title}}</h3>
 <ul>
   {{#each list.items as |item|}}
     {{listr-list/item item=item}}
